--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en-us">
-  
+
   {% include head.html %}
-  
+
   <body>
-    
+
     <div class="page-container">
-      
+
       <!-- top navbar -->
       <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -16,35 +16,35 @@
                  <span class="icon-bar"></span>
                  <span class="icon-bar"></span>
                </button>
-               <a class="navbar-brand" href="#">Leia Reviews</a>
+               <a class="navbar-brand" href="#">represtools</a>
         	</div>
         </div>
       </div>
-      
+
       <div class="container">
-        
+
         <div class="row row-offcanvas row-offcanvas-left">
-          
+
           <div class="col-xs-6 col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
-            
+
             {% include navbar.html %}
-          
+
           </div>
-          
+
           <div class="col-xs-12 col-sm-9 main">
-            
+
             {{ content }}
-    
+
           </div>
-          
+
         </div> <!-- end row-->
-      
+
       </div> <!-- end fluid container -->
-      
+
     </div> <!-- end page container-->
-    
+
   </body>
-  
+
   {% include footer.html %}
 
 </html>
